# stockplane

./: .env.example  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: be0ca67ecfae_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: auth.py  customers.py  inventory.py  orders.py  products.py  stats.py
backend/app/core/: database.py  deps.py  security.py
backend/app/exceptions/: base.py  handlers.py
backend/app/idempotency/: __init__.py  constants.py  enums.py  repository.py  service.py  types.py
backend/app/models/: __init__.py  base.py  business.py  business_member.py  customer.py  idempotency_record.py  inventory.py  inventory_transaction.py  order.py  order_transitions.py  product.py  user.py
backend/app/repositories/: base.py  business.py  business_member.py  customer.py  inventory.py  inventory_transaction.py  order.py  product.py  user.py
backend/app/schemas/: base.py  business.py  business_member.py  customer.py  order.py  product.py  stats.py  user.py
backend/app/services/: auth.py  base.py  business.py  customer.py  inventory.py  order.py  product.py  stats.py
backend/docker/: entrypoint.sh
backend/tests/: concurrency.py  conftest.py  factories.py  helpers.py  test_auth.py  test_customers.py  test_idempotency.py  test_inventory.py  test_orders.py  test_products.py  test_stats.py
frontend/: .dockerignore  Dockerfile  components.json  index.html  package-lock.json  (+2 more)
(+89 files in other folders)
